tests/rspack-test/configCases/errors/rspack-issue-4504/errors.js
module.exports = [
	[/Expected value to be one of "md4", "xxhash64" or "sha256" at "output.hashFunction"/]
];
